// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> passes the correct rssUrl according to state 1`] = `
<Fragment>
  <Header
    addPodcast={[Function]}
    title="Pidpod"
  />
  <Library
    heading="My Podcasts"
    rssUrl="mock.com/url/rss"
  />
</Fragment>
`;

exports[`<App /> renders correctly 1`] = `
<Fragment>
  <Header
    addPodcast={[Function]}
    title="Pidpod"
  />
  <Library
    heading="My Podcasts"
    rssUrl=""
  />
</Fragment>
`;
